finish index.html

--- a/src/main/resources/static/css/junwei.css
+++ b/src/main/resources/static/css/junwei.css
@@ -10,3 +10,13 @@ body {
     float: right;
     margin-bottom: 15px;
 }
+
+.media-object{
+    width: 42px;
+    height: 42px;
+}
+.text_desc{
+    font-size: 12px;
+    font-weight: normal;
+    color: #999;
+}
