--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,18 +1,20 @@
 <!DOCTYPE HTML>
-<html lang="en"  xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>校花社区</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <link rel="stylesheet" href="css/bootstrap.min.css"/>
     <link rel="stylesheet" href="css/bootstrap-theme.min.css">
     <script src="js/bootstrap.min.js" type="application/javascript"></script>
+    <link rel="stylesheet" href="css/junwei.css">
 </head>
 <body>
 <nav class="navbar navbar-default">
     <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+                    data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
                 <span class="sr-only">校花社区</span>
             </button>
             <a class="navbar-brand" href="#">校花社区</a>
@@ -32,14 +34,14 @@
                 </li>
                 <!--                <div th:text="${session.user}"></div>-->
                 <li class="dropdown" th:if="${session.user != null}">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-                   aria-expanded="false" th:text="${session.user.getName()}"><span class="caret"></span>
-                </a>
-                <ul class="dropdown-menu">
-                    <li><a href="#">消息中心</a></li>
-                    <li><a href="#">个人资料</a></li>
-                    <li><a href="#">退出登录</a></li>
-                </ul>
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
+                       aria-expanded="false" th:text="${session.user.getName()}"><span class="caret"></span>
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a href="#">消息中心</a></li>
+                        <li><a href="#">个人资料</a></li>
+                        <li><a href="#">退出登录</a></li>
+                    </ul>
                 </li>
 
                 <li th:if="${session.user == null}">
@@ -50,5 +52,39 @@
         </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
 </nav>
+<div class="container-fluid main">
+    <div class="row">
+        <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12 ">
+            <h2><span class=" glyphicon glyphicon-list" aria-hidden="true"></span> 发现</h2>
+            <hr>
+
+            <div class="media" th:each="question : ${questions}">
+                <div class="media-left">
+                    <a href="#">
+                        <img class="media-object img-rounded"  th:src="${question.user.avatarUrl}" >
+                    </a>
+<!--                    <span th:text="${question.user.avatarUrl}"></span>-->
+                </div>
+                <div class="media-body">
+                    <h4 class="media-heading " th:text="${question.title}">怎么快速学会springboot开发</h4>
+                    <span th:text="${question.description}"></span><br>
+                    <span class="text_desc"><span th:text="${question.commentCount}"></span>个回复 • <span th:text="${question.viewCount}"></span> 次浏览 • <span th:text="${#dates.format(question.gmtCreate,'dd MMMM yyyy')}"></span></span>
+                </div>
+            </div>
+
+
+        </div>
+        <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
+
+            <ul>
+                <li><h3>热门话题</h3></li>
+                <br>
+                <li>问题标题：请用精简的语言描述您发布的问题，不超过25字</li>
+                <li>问题补充：详细补充您的问题内容，并确保描述清晰直观，并提供一些相关的资料。</li>
+                <li>选择标签：选择一个或者多个合适的标签，用逗号隔开，每个标签不超过10个字</li>
+            </ul>
+        </div>
+    </div>
+</div>
 </body>
 </html>
